patches overflow issues with the settings modal

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -146,23 +146,26 @@ body {
 
   .settings-modal {
     z-index: 999;
+    width: 100vw;
+    height: 100vh;
+    padding: 0!important;
+    overflow-y: scroll;
 
     .settings-container {
       background: $dark-grey;
       color: white;
-      width: calc(100vw + 1rem);
-      transform: translateX(-1rem);
   
       .settings-header {
         position: fixed;
         top: 0;
         background: $dark-grey;
         width: 100%;
-        padding: 1rem;
+        padding: 1rem 0;
         border-bottom: solid 1px rgba(255,255,255, 0.15);
+        z-index: 999;
         
         h3 {
-          margin: 0;
+          margin: 0 0 0 1rem;
         }
   
         .settings-close {
@@ -177,10 +180,7 @@ body {
         display: flex;
         flex-direction: column;
         gap: 1rem 0;
-        height: 100vh;
-        width: 100%;
-        overflow: scroll;
-        padding: 4rem 1rem 1rem;
+        padding: 4rem 1rem 2rem;
       }
   
       .settings-input-group {
